// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventTitle renders with also subtitle 1`] = `
<span>
  <Latex>
    Conference Title
  </Latex>
  <span>
    <span>
       : 
    </span>
    <Latex>
      Sub
    </Latex>
  </span>
</span>
`;

exports[`EventTitle renders with everything 1`] = `
<span>
  <Latex>
    Conference Title
  </Latex>
  <span>
    <span>
       : 
    </span>
    <Latex>
      Sub
    </Latex>
  </span>
  <span>
     (
    CTest
    )
  </span>
</span>
`;

exports[`EventTitle renders with only title 1`] = `
<span>
  <Latex>
    Conference Title
  </Latex>
</span>
`;
